--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         rel="stylesheet">
     <!-- ======= Animaciones ======= -->
 
-        <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <!-- ======= Custom styles ======= -->
     <link rel="stylesheet" href="./assets/css/styles.css">
     <!-- ======= Titulo Page ======= -->
@@ -57,7 +57,7 @@
     <section id="hero">
         <div class="container">
             <div class="row d-flex align-items-center py-5">
-                <div class=" col-lg-6 py-5 py-lg-0 order-2 order-lg-2 text-center text-md-right" data-aos="fade-left" >
+                <div class=" col-lg-6 py-5 py-lg-0 order-2 order-lg-2 text-center text-md-right" data-aos="fade-left">
                     <h1>Lorem ipsum dolor sit amet consectetur adipisicing elit.</h1>
                     <h2>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Iure, nesciunt.</h2>
                     <a href="#about" class="btn-get-started scrollto">Get Started</a>
@@ -70,6 +70,8 @@
 
     </section>
     <!-- End Hero -->
+
+
 
     <main id="main">
 
@@ -120,45 +122,115 @@
 
         <section id="about" class="about section-bg">
             <div class="container">
-                
-        <div class="row">
-            <div class="image col-xl-5 d-flex align-items-stretch justify-content-center justify-content-lg-start order-lg-2"></div>
-
-            
-            <div class="col-xl-7 pl-0 pr-lg-5 pr-lg-1 d-flex align-items-stretch order-lg-1">
-              <div class="content d-flex flex-column justify-content-center ">
-                <h3 class="text-center" data-aos="fade-in" data-aos-delay="100">Voluptatem dignissimos provident quasi</h3>
-                <p data-aos="fade-in" class="text-center pl-2">
-                  Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Duis aute irure dolor in reprehenderit
-                </p>
-                <div class="row pl-5 pl-md-0">
-                  <div class="col-md-6 col-12 icon-box" data-aos="fade-up">
-                    <i class="far fa-newspaper"></i>
-                    <h4><a href="#">Corporis voluptates sit</a></h4>
-                    <p>Consequuntur sunt aut quasi enim aliquam quae harum pariatur laboris nisi ut aliquip</p>
-                  </div>
-                  <div class="col-md-6 icon-box" data-aos="fade-up" data-aos-delay="100">
-                    <i class="fab fa-dashcube"></i>
-                    <h4><a href="#">Ullamco laboris nisi</a></h4>
-                    <p>Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt</p>
-                  </div>
-                  <div class="col-md-6 icon-box" data-aos="fade-up" data-aos-delay="200">
-                    <i class="fas fa-images"></i>
-                    <h4><a href="#">Labore consequatur</a></h4>
-                    <p>Aut suscipit aut cum nemo deleniti aut omnis. Doloribus ut maiores omnis facere</p>
-                  </div>
-                  <div class="col-md-6 icon-box" data-aos="fade-up" data-aos-delay="300">
-                    <i class="fas fa-shield-alt"></i>
-                    <h4><a href="#">Beatae veritatis</a></h4>
-                    <p>Expedita veritatis consequuntur nihil tempore laudantium vitae denat pacta</p>
-                  </div>
+                <div class="row">
+                    <div
+                        class="image col-xl-5 d-flex align-items-stretch justify-content-center justify-content-lg-start order-lg-2">
+                    </div>
+                    <div class="col-xl-7 pl-0 pr-lg-5 pr-lg-1 d-flex align-items-stretch order-lg-1">
+                        <div class="content d-flex flex-column justify-content-center ">
+                            <h3 class="text-center" data-aos="fade-in" data-aos-delay="100">Voluptatem dignissimos
+                                provident quasi</h3>
+                            <p data-aos="fade-in" class="text-center pl-2">
+                                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
+                                incididunt ut labore et dolore magna aliqua. Duis aute irure dolor in reprehenderit
+                            </p>
+                            <div class="row pl-5 pl-md-0">
+                                <div class="col-md-6 col-12 icon-box" data-aos="fade-up">
+                                    <i class="far fa-newspaper"></i>
+                                    <h4><a href="#">Corporis voluptates sit</a></h4>
+                                    <p>Consequuntur sunt aut quasi enim aliquam quae harum pariatur laboris nisi ut
+                                        aliquip</p>
+                                </div>
+                                <div class="col-md-6 icon-box" data-aos="fade-up" data-aos-delay="100">
+                                    <i class="fab fa-dashcube"></i>
+                                    <h4><a href="#">Ullamco laboris nisi</a></h4>
+                                    <p>Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia
+                                        deserunt</p>
+                                </div>
+                                <div class="col-md-6 icon-box" data-aos="fade-up" data-aos-delay="200">
+                                    <i class="fas fa-images"></i>
+                                    <h4><a href="#">Labore consequatur</a></h4>
+                                    <p>Aut suscipit aut cum nemo deleniti aut omnis. Doloribus ut maiores omnis facere
+                                    </p>
+                                </div>
+                                <div class="col-md-6 icon-box" data-aos="fade-up" data-aos-delay="300">
+                                    <i class="fas fa-shield-alt"></i>
+                                    <h4><a href="#">Beatae veritatis</a></h4>
+                                    <p>Expedita veritatis consequuntur nihil tempore laudantium vitae denat pacta</p>
+                                </div>
+                            </div>
+                        </div><!-- End .content-->
+                    </div>
                 </div>
-              </div><!-- End .content-->
-            </div>
-          </div>
             </div>
         </section>
 
+        <section id="services" class="services section-bg">
+            <div class="container">
+
+                <div class="section-title">
+                    <h2 data-aos="fade-in">Services</h2>
+                    <p data-aos="fade-in">Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex aliquid
+                        fuga eum quidem. Sit sint consectetur velit. Quisquam quos quisquam cupiditate. Et nemo qui
+                        impedit suscipit alias ea. Quia fugiat sit in iste officiis commodi quidem hic quas.</p>
+                </div>
+
+                <div class="row">
+                    <div class="col-md-6 d-flex align-items-stretch" data-aos="fade-right">
+                        <div class="card">
+                            <div class="card-img">
+                                <img src="assets/img/services-1.jpg" alt="...">
+                            </div>
+
+                            <div class="card-body">
+                                <h5 class="card-title">Temporibus laudantium</h5>
+                                <p class="card-text">Lorem ipsum dolor sit amet, consectetur elit, sed do eiusmod tempor ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat</p>
+                                <div class="read-more"><a href=""><i class="fas fa-arrow-right"></i>Read More</a></div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-md-6 d-flex align-items-stretch" data-aos="fade-left">
+                        <div class="card">
+                            <div class="card-img">
+                                <img src="assets/img/services-1.jpg" alt="...">
+                            </div>
+
+                            <div class="card-body">
+                                <h5 class="card-title">Temporibus laudantium</h5>
+                                <p class="card-text">Lorem ipsum dolor sit amet, consectetur elit, sed do eiusmod tempor ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat</p>
+                                <div class="read-more"><a href=""><i class="fas fa-arrow-right"></i>Read More</a></div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-md-6 d-flex align-items-stretch" data-aos="fade-right">
+                        <div class="card">
+                            <div class="card-img">
+                                <img src="assets/img/services-1.jpg" alt="...">
+                            </div>
+
+                            <div class="card-body">
+                                <h5 class="card-title">Temporibus laudantium</h5>
+                                <p class="card-text">Lorem ipsum dolor sit amet, consectetur elit, sed do eiusmod tempor ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat</p>
+                                <div class="read-more"><a href=""><i class="fas fa-arrow-right"></i>Read More</a></div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-md-6 d-flex align-items-stretch" data-aos="fade-left">
+                        <div class="card">
+                            <div class="card-img">
+                                <img src="assets/img/services-1.jpg" alt="...">
+                            </div>
+
+                            <div class="card-body">
+                                <h5 class="card-title">Temporibus laudantium</h5>
+                                <p class="card-text">Lorem ipsum dolor sit amet, consectetur elit, sed do eiusmod tempor ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat</p>
+                                <div class="read-more"><a href=""><i class="fas fa-arrow-right"></i>Read More</a></div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
 
     </main>
     <!-- = JQuery = -->
@@ -174,7 +246,7 @@
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"
         integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6"
         crossorigin="anonymous"></script>
-        <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
     <!-- = Main = -->
     <script src="assets/js/main.js"></script>
 
