--- a/index.html
+++ b/index.html
@@ -14,14 +14,14 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta2/css/all.min.css"
         integrity="sha512-YWzhKL2whUzgiheMoBFwW8CKV4qpHQAEuvilg9FAn5VJUDwKZZxkJNuGM4XkWuk94WCrrwslk8yWNGmY1EduTA=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
-
+    <link rel="stylesheet" href="./assets//venobox/venobox.css">
     <!-- ======= Font ======= -->
     <link
         href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
         rel="stylesheet">
     <!-- ======= Animaciones ======= -->
 
-    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+    <link href="./assets/venobox/aos.css" rel="stylesheet">
     <!-- ======= Custom styles ======= -->
     <link rel="stylesheet" href="./assets/css/styles.css">
     <!-- ======= Titulo Page ======= -->
@@ -31,7 +31,7 @@
 <body>
 
     <header class="header">
-        <div class="container d-flex">
+        <div class="container d-flex ">
 
             <!-- ======= Logo ======= -->
             <div class="logo mr-auto">
@@ -184,7 +184,9 @@
 
                             <div class="card-body">
                                 <h5 class="card-title">Temporibus laudantium</h5>
-                                <p class="card-text">Lorem ipsum dolor sit amet, consectetur elit, sed do eiusmod tempor ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat</p>
+                                <p class="card-text">Lorem ipsum dolor sit amet, consectetur elit, sed do eiusmod tempor
+                                    ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation
+                                    ullamco laboris nisi ut aliquip ex ea commodo consequat</p>
                                 <div class="read-more"><a href=""><i class="fas fa-arrow-right"></i>Read More</a></div>
                             </div>
                         </div>
@@ -197,7 +199,9 @@
 
                             <div class="card-body">
                                 <h5 class="card-title">Temporibus laudantium</h5>
-                                <p class="card-text">Lorem ipsum dolor sit amet, consectetur elit, sed do eiusmod tempor ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat</p>
+                                <p class="card-text">Lorem ipsum dolor sit amet, consectetur elit, sed do eiusmod tempor
+                                    ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation
+                                    ullamco laboris nisi ut aliquip ex ea commodo consequat</p>
                                 <div class="read-more"><a href=""><i class="fas fa-arrow-right"></i>Read More</a></div>
                             </div>
                         </div>
@@ -210,7 +214,9 @@
 
                             <div class="card-body">
                                 <h5 class="card-title">Temporibus laudantium</h5>
-                                <p class="card-text">Lorem ipsum dolor sit amet, consectetur elit, sed do eiusmod tempor ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat</p>
+                                <p class="card-text">Lorem ipsum dolor sit amet, consectetur elit, sed do eiusmod tempor
+                                    ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation
+                                    ullamco laboris nisi ut aliquip ex ea commodo consequat</p>
                                 <div class="read-more"><a href=""><i class="fas fa-arrow-right"></i>Read More</a></div>
                             </div>
                         </div>
@@ -223,7 +229,9 @@
 
                             <div class="card-body">
                                 <h5 class="card-title">Temporibus laudantium</h5>
-                                <p class="card-text">Lorem ipsum dolor sit amet, consectetur elit, sed do eiusmod tempor ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat</p>
+                                <p class="card-text">Lorem ipsum dolor sit amet, consectetur elit, sed do eiusmod tempor
+                                    ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation
+                                    ullamco laboris nisi ut aliquip ex ea commodo consequat</p>
                                 <div class="read-more"><a href=""><i class="fas fa-arrow-right"></i>Read More</a></div>
                             </div>
                         </div>
@@ -233,20 +241,20 @@
         </section>
 
     </main>
-    <!-- = JQuery = -->
-    <script src="https://code.jquery.com/jquery-3.6.0.min.js"
-        integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
+    <a href="#" class="back-to-top"><i class="fas fa-arrow-up"></i></a>    
     <!-- = Js Bootstrap 4.4 = -->
-    <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
-        integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n"
-        crossorigin="anonymous"></script>
+    <script src="./assets/venobox/jquery.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
         integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo"
         crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"
         integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6"
         crossorigin="anonymous"></script>
-    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+        <script src="assets/venobox/jquery.easing.min.js"></script>
+    <script src="./assets/venobox/aos.js"></script>
+
+    <!-- <script src="./assets/venobox/venobox.min.js"></script> -->
+
     <!-- = Main = -->
     <script src="assets/js/main.js"></script>
 
