--- a/index.html
+++ b/index.html
@@ -401,7 +401,7 @@
             <div class="container">
 
                 <div class="section-title">
-                    <h2 data-aos="fade-in">Pricing</h2>
+                    <h2 data-aos="fade-in">Precios</h2>
                     <p data-aos="fade-in">Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex aliquid
                         fuga eum quidem. Sit sint consectetur velit. Quisquam quos quisquam cupiditate. Et nemo qui
                         impedit suscipit alias ea. Quia fugiat sit in iste officiis commodi quidem hic quas.</p>
@@ -413,7 +413,7 @@
                             <li data-filter="*" class="filter-active">Todos</li>
 
                             <li data-filter=".filter-Desarollo">Desarollo</li>
-                            <li data-filter=".filter-Diseño">Diseño</li>
+                            <!-- <li data-filter=".filter-Diseño">Diseño</li> -->
                         </ul>
                     </div>
                 </div>
@@ -423,47 +423,73 @@
                         <div class="col-lg-12 pb-5">
                             <h4>DESAROLLO</h4>
                         </div>
-                        <div class="col-lg-4 box">
-                            <h3>WEB</h3>
-                            <h4>$500.000<span>LANDING PAGE</span></h4>
-                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eveniet modi minus at dolores!
-                                Maiores laboriosam laborum, a sed eveniet esse.</p>
-                            <h4>$1'000.000<span>MARKETPLACE</span></h4>
-                            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Beatae aperiam perferendis eos
-                                nobis temporibus eligendi possimus incidunt cum nemo autem!</p>
-                            <a href="#" class="get-started-btn">Get Started</a>
+                        <div class="col-lg-4 box d-flex flex-column">
+                            <div>
+                                <h3>WEB</h3>
+                                <h4>$500.000<span>LANDING PAGE</span></h4>
+                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eveniet modi minus at
+                                    dolores!
+                                    Maiores laboriosam laborum, a sed eveniet esse.</p>
+                                <div class="read-more text-left py-2"><a href="">
+                                        <i class="fas fa-arrow-right"></i>
+                                        Leer Más
+                                    </a>
+                                </div>
+                                <span class="subtitle">DESDE</span>
+                                <h4>$1'000.000<span>MARKETPLACE</span></h4>
+                                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Beatae aperiam perferendis
+                                    eos
+                                    nobis temporibus eligendi possimus incidunt cum nemo autem!</p>
+                            </div>
+                            <div class="read-more text-left py-2">
+                                <a href="">
+                                    <i class="fas fa-arrow-right"></i>
+                                    Leer Más
+                                </a>
+                            </div>
+                            <a href="#" class="get-started-btn align-content-end">Contactanos</a>
                         </div>
 
-                        <div class="col-lg-4 box featured">
+                        <div class="col-lg-4 box featured d-flex flex-column">
                             <span class="featured-badge">OFERTA</span>
                             <h3>PERSONALIZADO</h3>
-                            <span class="subtitle">Desde</span>
+                            <span class="subtitle">DESDE</span>
                             <h4>$1'500.000</h4>
                             <P>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Assumenda, non cum sint
                                 laudantium odio adipisci sequi quos molestias dignissimos voluptates sed excepturi totam
                                 consectetur quia animi officiis iste! Aliquid perferendis fuga odit minus possimus.
                                 Aliquam corrupti unde iste voluptate etc.
                             </P>
-                            <a href="#" class="get-started-btn">Get Started</a>
+                            <div class="read-more text-left py-2"><a href="">
+                                <i class="fas fa-arrow-right"></i>
+                                Leer Más
+                            </a>
+                        </div>
+                        <a href="#" class="get-started-btn align-content-end">Contactanos</a>
                         </div>
 
-                        <div class="col-lg-4 box">
+                        <div class="col-lg-4 box d-flex flex-column">
                             <h3>MOBILE</h3>
-                            <span class="subtitle">Desde</span>
+                            <span class="subtitle">DESDE</span>
                             <h4>$2'000.000</h4>
                             <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. A accusantium dolore aperiam
                                 tempora et tempore praesentium ipsum recusandae dolor culpa?</p>
-                            <a href="#" class="get-started-btn">Get Started</a>
+                                <div class="read-more text-left py-2"><a href="">
+                                    <i class="fas fa-arrow-right"></i>
+                                    Leer Más
+                                </a>
+                            </div>
+                            <a href="#" class="get-started-btn align-content-end">Contactanos</a>
                         </div>
                     </div>
 
-                    <div class="row text-center no-gutters pricing-item filter-Diseño w-100">
+                    <div class="row text-center no-gutters pricing-item filter-Diseño w-100 ">
                         <div class="col-lg-12 pb-5">
                             <h4>DISEÑO </h4>
                         </div>
                         <div class="col-lg-4 box">
-                            <h3>NO SE QUE VENDE :V</h3>
-                            <h4>$0<span>per month</span></h4>
+                            <h3>Social Media</h3>
+                            <h4>$400.000<span>per month</span></h4>
                             <ul>
                                 <li><i class="bx bx-check"></i> Quam adipiscing vitae proin</li>
                                 <li><i class="bx bx-check"></i> Nec feugiat nisl pretium</li>
@@ -499,7 +525,8 @@
                                 <li><i class="bx bx-check"></i> Pharetra massa massa ultricies</li>
                                 <li><i class="bx bx-check"></i> Massa ultricies mi quis hendrerit</li>
                             </ul>
-                            <a href="#" class="get-started-btn">Get Started</a>
+                            <a target="_black" href="https://api.whatsapp.com/send?phone=+573112577264"
+                                class="get-started-btn">Consultanos</a>
                         </div>
                     </div>
                 </div>
@@ -511,7 +538,7 @@
             <div class="container">
 
                 <div class="section-title">
-                    <h2>Contact</h2>
+                    <h2>Contactanos</h2>
                     <p>Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex aliquid
                         fuga eum quidem. Sit sint consectetur velit. Quisquam quos quisquam cupiditate. Et nemo qui
                         impedit suscipit alias ea. Quia fugiat sit in iste officiis commodi quidem hic quas.</p>
@@ -598,18 +625,9 @@
 
                 <div class="row  justify-content-center">
                     <div class="col-lg-6">
-                        <h3>Title</h3>
+                        <h3></h3>
                         <p>Et aut eum quis fuga eos sunt ipsa nihil. Labore corporis magni eligendi fuga maxime saepe
                             commodi placeat.</p>
-                    </div>
-                </div>
-
-                <div class="row footer-newsletter justify-content-center">
-                    <div class="col-lg-6">
-                        <form action="" method="post">
-                            <input type="email" name="email" placeholder="Enter your Email"><input type="submit"
-                                value="Subscribe">
-                        </form>
                     </div>
                 </div>
 
