--- a/index.html
+++ b/index.html
@@ -413,7 +413,7 @@
                             <li data-filter="*" class="filter-active">Todos</li>
 
                             <li data-filter=".filter-Desarollo">Desarollo</li>
-                            <!-- <li data-filter=".filter-Diseño">Diseño</li> -->
+                            <li data-filter=".filter-Diseño">Diseño</li>
                         </ul>
                     </div>
                 </div>
@@ -461,11 +461,11 @@
                                 Aliquam corrupti unde iste voluptate etc.
                             </P>
                             <div class="read-more text-left py-2"><a href="">
-                                <i class="fas fa-arrow-right"></i>
-                                Leer Más
-                            </a>
-                        </div>
-                        <a href="#" class="get-started-btn align-content-end">Contactanos</a>
+                                    <i class="fas fa-arrow-right"></i>
+                                    Leer Más
+                                </a>
+                            </div>
+                            <a href="#" class="get-started-btn align-content-end">Contactanos</a>
                         </div>
 
                         <div class="col-lg-4 box d-flex flex-column">
@@ -474,7 +474,7 @@
                             <h4>$2'000.000</h4>
                             <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. A accusantium dolore aperiam
                                 tempora et tempore praesentium ipsum recusandae dolor culpa?</p>
-                                <div class="read-more text-left py-2"><a href="">
+                            <div class="read-more text-left py-2"><a href="">
                                     <i class="fas fa-arrow-right"></i>
                                     Leer Más
                                 </a>
@@ -485,48 +485,46 @@
 
                     <div class="row text-center no-gutters pricing-item filter-Diseño w-100 ">
                         <div class="col-lg-12 pb-5">
-                            <h4>DISEÑO </h4>
+                            <h4>DISEÑO</h4>
                         </div>
-                        <div class="col-lg-4 box">
-                            <h3>Social Media</h3>
-                            <h4>$400.000<span>per month</span></h4>
-                            <ul>
-                                <li><i class="bx bx-check"></i> Quam adipiscing vitae proin</li>
-                                <li><i class="bx bx-check"></i> Nec feugiat nisl pretium</li>
-                                <li><i class="bx bx-check"></i> Nulla at volutpat diam uteera</li>
-                                <li class="na"><i class="bx bx-x"></i> <span>Pharetra massa massa ultricies</span></li>
-                                <li class="na"><i class="bx bx-x"></i> <span>Massa ultricies mi quis hendrerit</span>
-                                </li>
-                            </ul>
-                            <a href="#" class="get-started-btn">Get Started</a>
+                        <div class="col-lg-4 box d-flex flex-column">
+                            <h3>Publicidad</h3>
+                            <span class="subtitle">DESDE</span>
+                            <h4>$60.000<span>Diseño Publicitario</span></h4>
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sint ea odio mollitia aliquam
+                                saepe? Architecto dolores cupiditate deserunt quaerat itaque?</p>
+                                <div class="read-more text-left py-2"><a href="">
+                                    <i class="fas fa-arrow-right"></i>
+                                    Leer Más
+                                </a>
+                            </div>
+                            <a href="#" class="get-started-btn">Contactanosd</a>
                         </div>
 
-                        <div class="col-lg-4 box featured">
+                        <div class="col-lg-4 box featured d-flex flex-column">
                             <span class="featured-badge">Featured</span>
-                            <h3>Business</h3>
-                            <h4>$29<span>per month</span></h4>
-                            <ul>
-                                <li><i class="bx bx-check"></i> Quam adipiscing vitae proin</li>
-                                <li><i class="bx bx-check"></i> Nec feugiat nisl pretium</li>
-                                <li><i class="bx bx-check"></i> Nulla at volutpat diam uteera</li>
-                                <li><i class="bx bx-check"></i> Pharetra massa massa ultricies</li>
-                                <li><i class="bx bx-check"></i> Massa ultricies mi quis hendrerit</li>
-                            </ul>
-                            <a href="#" class="get-started-btn">Get Started</a>
+                            <h3>BRANDING</h3>
+                            <span class="subtitle">DESDE</span>
+                            <h4>$100.000<span>Diseño y creacion de Marca</span></h4>
+                           <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Libero ipsum provident corrupti unde eaque aliquid ea at nulla ab consectetur?</p>
+                            <div class="read-more text-left py-2"><a href="">
+                                <i class="fas fa-arrow-right"></i>
+                                Leer Más
+                            </a>
+                        </div>
+                            <a href="#" class="get-started-btn">Contactanos</a>
                         </div>
 
-                        <div class="col-lg-4 box">
-                            <h3>Developer</h3>
-                            <h4>$49<span>per month</span></h4>
-                            <ul>
-                                <li><i class="bx bx-check"></i> Quam adipiscing vitae proin</li>
-                                <li><i class="bx bx-check"></i> Nec feugiat nisl pretium</li>
-                                <li><i class="bx bx-check"></i> Nulla at volutpat diam uteera</li>
-                                <li><i class="bx bx-check"></i> Pharetra massa massa ultricies</li>
-                                <li><i class="bx bx-check"></i> Massa ultricies mi quis hendrerit</li>
-                            </ul>
+                        <div class="col-lg-4 box d-flex flex-column">
+
+                            <h3>ILUSTRACIONES</h3>
+                            <span class="subtitle">DESDE</span>
+                            <h4>$70.000<span>Ilustraciones Personales</span></h4>
+                           <p>
+                               Lorem ipsum dolor sit amet consectetur adipisicing elit. Deleniti et praesentium voluptate facere officia dicta unde aperiam amet optio tempore.
+                           </p>
                             <a target="_black" href="https://api.whatsapp.com/send?phone=+573112577264"
-                                class="get-started-btn">Consultanos</a>
+                                class="get-started-btn">Contactanos</a>
                         </div>
                     </div>
                 </div>
