--- a/index.html
+++ b/index.html
@@ -493,7 +493,7 @@
                             <h4>$60.000<span>Diseño Publicitario</span></h4>
                             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sint ea odio mollitia aliquam
                                 saepe? Architecto dolores cupiditate deserunt quaerat itaque?</p>
-                                <div class="read-more text-left py-2"><a href="">
+                            <div class="read-more text-left py-2"><a href="">
                                     <i class="fas fa-arrow-right"></i>
                                     Leer Más
                                 </a>
@@ -501,17 +501,18 @@
                             <a href="#" class="get-started-btn">Contactanosd</a>
                         </div>
 
-                        <div class="col-lg-4 box featured d-flex flex-column">
-                            <span class="featured-badge">Featured</span>
+                        <div class="col-lg-4 box featured1 d-flex flex-column">
+                            <span class="featured-badge">Oferta</span>
                             <h3>BRANDING</h3>
                             <span class="subtitle">DESDE</span>
                             <h4>$100.000<span>Diseño y creacion de Marca</span></h4>
-                           <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Libero ipsum provident corrupti unde eaque aliquid ea at nulla ab consectetur?</p>
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Libero ipsum provident corrupti
+                                unde eaque aliquid ea at nulla ab consectetur?</p>
                             <div class="read-more text-left py-2"><a href="">
-                                <i class="fas fa-arrow-right"></i>
-                                Leer Más
-                            </a>
-                        </div>
+                                    <i class="fas fa-arrow-right"></i>
+                                    Leer Más
+                                </a>
+                            </div>
                             <a href="#" class="get-started-btn">Contactanos</a>
                         </div>
 
@@ -520,10 +521,17 @@
                             <h3>ILUSTRACIONES</h3>
                             <span class="subtitle">DESDE</span>
                             <h4>$70.000<span>Ilustraciones Personales</span></h4>
-                           <p>
-                               Lorem ipsum dolor sit amet consectetur adipisicing elit. Deleniti et praesentium voluptate facere officia dicta unde aperiam amet optio tempore.
-                           </p>
-                            <a target="_black" href="https://api.whatsapp.com/send?phone=+573112577264"
+                            <p>
+                                Lorem ipsum dolor sit amet consectetur adipisicing elit. Deleniti et praesentium
+                                voluptate facere officia dicta unde aperiam amet optio tempore.
+                            </p>
+                            <div class="read-more text-left py-2"><a href="">
+                                <i class="fas fa-arrow-right"></i>
+                                Leer Más
+                            </a>
+                        </div>
+                            <a target="_black"
+                                href="https://api.whatsapp.com/send?phone=+573112577264&text=I'm%20interested%20in%20your%20services"
                                 class="get-started-btn">Contactanos</a>
                         </div>
                     </div>
