--- a/index.html
+++ b/index.html
@@ -25,6 +25,9 @@
     <!-- ======= Custom styles ======= -->
     <link rel="stylesheet" href="./assets/css/styles.css">
     <!-- ======= Titulo Page ======= -->
+
+<link rel="shortcut icon" href="./assets/img/Favicon.png" type="image/png">
+
     <title>Dev&Design</title>
 </head>
 
